--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,26 +2,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Welcome to medical journal system</title>
+    <title>Welcome to automated trading system</title>
     <script src="js/angular-min.js"></script>
     <script src="js/app.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
-<body ng-app="JournalApp" ng-controller="CategoryController">
-<h2>Welcome to medical journal system</h2>
+<body ng-app="TraderApp" ng-controller="ExchangeController">
+<h2>Welcome to automated trading system</h2>
 
 
-<div sec:authorize="isAuthenticated()" ng-controller="getSubscriptions">
+<div sec:authorize="isAuthenticated()" ng-controller="getExchanges">
     <table>
         <thead>
-        <td>Journal category</td>
-        <td>Subscribe</td>
+        <td>Exchange</td>
+        <td>Assign</td>
         </thead>
         <tbody>
-        <tr ng-repeat="subscription in subscriptions">
-            <td>{{subscription.name}}</td>
+        <tr ng-repeat="exchange in exchanges">
+            <td>{{exchange.name}}</td>
             <td>
-                <input type="button" value="subscribe" ng-disabled="subscription.active"  ng-click="subscribe(subscription.id)"/>
+                <input type="button" value="assign" ng-disabled="assignment.active"  ng-click="assign(exchange.id)"/>
             </td>
         </tr>
         </tbody>
@@ -29,8 +29,8 @@
     <table>
         <tr>
             <td>
-                <form action="/journals">
-                    <input type="submit" value="view journals" />
+                <form action="/sessions">
+                    <input type="submit" value="view sessions" />
                 </form>
             </td>
             <td>
@@ -39,8 +39,8 @@
                 </form>
             </td>
             <td>
-                <form sec:authorize="${hasAnyAuthority('PUBLISHER')}" action="/publisher/browse">
-                    <input type="submit" value="Go to Publisher page"/>
+                <form sec:authorize="${hasAnyAuthority('TRADER')}" action="/trader/browse">
+                    <input type="submit" value="Go to Trader page"/>
                 </form>
             </td>
         </tr>
@@ -48,16 +48,16 @@
 
 </div>
 
-<div sec:authorize="isAnonymous()" ng-controller="getCategories">
+<div sec:authorize="isAnonymous()" ng-controller="getExchanges">
     <table>
         <thead>
-        <td>Journal category</td>
-        <td>Subscribe</td>
+        <td>Exchange</td>
+        <td>Assign</td>
         </thead>
         <tbody>
 
-        <tr ng-repeat="category in categories">
-            <td>{{category.name}}</td>
+        <tr ng-repeat="exchange in exchanges">
+            <td>{{exchange.name}}</td>
             <td>
                 <a href="/login">Login</a>
             </td>
